# choicellm

./: README.md  pyproject.toml
src/choicellm/: __init__.py  aggregate.py  cli.py  inputs.py  results.py  sampling.py  templates.py
src/choicellm/backends/: __init__.py  base.py  hf.py  openai.py
tests/: test_aggregate.py  test_base.py  test_openai_backend.py  test_results.py  test_sampling.py  test_templates.py
