[project]
name = "choicellm"
version = "0.3.0"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Using LLMs for rating items on a scale, comparative judgments, and multiple choice questions."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
# Core is dependency-free. Install a backend via the extras below, and see the README for the
# right PyTorch build (a mismatched CUDA build silently runs on CPU).
dependencies = []
license-files = ["LICENSE"]

[project.optional-dependencies]
# Local huggingface models. Install a matching torch build first (https://pytorch.org/get-started/locally/).
local = ["torch", "transformers", "accelerate", "bitsandbytes"]
# OpenAI-compatible API models (OpenAI, llama.cpp, vLLM, Ollama, ...).
openai = ["openai", "tiktoken"]
all = ["torch", "transformers", "accelerate", "bitsandbytes", "openai", "tiktoken"]
test = ["pytest"]

[project.scripts]
choicellm = "choicellm.cli:main"
choicellm-aggregate = "choicellm.aggregate:main"
choicellm-template = "choicellm.templates:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/mwestera/choicellm"
"Bug Tracker" = "https://github.com/mwestera/choicellm/issues"
